# archivist

./: .bandit  .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT_LOG.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/examples/: documents-corpus.yaml  podcast-corpus.yaml  web-corpus.yaml
src/archivist/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/archivist/adapters/: __init__.py  base.py  documents.py  podcast.py  web.py
src/archivist/processors/: __init__.py  chunker.py  extractors.py  whisper.py
src/archivist/server/: __init__.py  api.py  mcp_server.py
src/archivist/stores/: __init__.py  base.py  chromadb.py
src/archivist/utils/: http.py  logging.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_config.py  test_document_adapter.py  test_extractors.py  test_podcast_adapter.py  test_web_adapter.py
tests/fixtures/: sample_config.yaml  sample_corpus.yaml  sample_feed.xml  sample_page.html
